samples/_failures_safe/1761450232_0141a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af1edc8b.c: In function ‘main’:
./samples/SAFE/__tmp_af1edc8b.c:172:5: error: expected declaration or statement at end of input
  172 |     if (mat1.cols == mat2.rows) {
      |     ^~
./samples/SAFE/__tmp_af1edc8b.c:172:5: error: expected declaration or statement at end of input
